objects/Yodle_Path__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Yodle Path</relationshipLabel>
        <relationshipName>Yodle_Path</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activate_automated_emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate automated emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempt_1_Posted_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attempt 1 Posted to Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempt_2_Posted_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attempt 2 Posted to Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempt_3_Posted_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attempt 3 Posted to Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Date__c</fullName>
        <formula>IF( NOT( ISBLANK(DATEVALUE(Scheduled_Setup_Call_Date__c))), DATEVALUE(Scheduled_Setup_Call_Date__c) + 14, 
IF( NOT( ISBLANK(DATEVALUE(Scheduled_Coaching_Call__c))), DATEVALUE(Scheduled_Coaching_Call__c) + 7, 
IF( NOT( ISBLANK(DATEVALUE(Touch_Plan_1_Scheduled_Date_Time__c))), DATEVALUE(Touch_Plan_1_Scheduled_Date_Time__c) + 5, 
IF( NOT( ISBLANK(DATEVALUE(Touch_Plan_2_Scheduled_Date_Time__c))), DATEVALUE(Touch_Plan_2_Scheduled_Date_Time__c) + 5, 
IF( NOT( ISBLANK(DATEVALUE(Touch_Plan_3_Scheduled_Date_Time__c))), DATEVALUE(Touch_Plan_3_Scheduled_Date_Time__c) + 5, 
(In_Progress_Date__c + 5))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Coaching_Call_Script__c</fullName>
        <formula>'https://na26.salesforce.com/articles/Scripts/Yodle-Path-Coaching-Call'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coaching Call Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coaching Call</label>
        <referenceTo>Yodle_Path__c</referenceTo>
        <relationshipLabel>Yodle Path (Coaching Call)</relationshipLabel>
        <relationshipName>Yodle_Path1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coaching_Close_Date__c</fullName>
        <label>Coaching Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_VIP_customer_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create VIP customer list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_an_offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create an offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date__c</fullName>
        <label>In Progress Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Log_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Task_Call_Duration__c</fullName>
        <label>Most Recent Task Call Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Task_Date_Time__c</fullName>
        <label>Most Recent Task Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Task_Id__c</fullName>
        <label>Most Recent Task ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Yodle Path</relationshipLabel>
        <relationshipName>Yodle_Path</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pass_Fail_Date__c</fullName>
        <label>Pass/Fail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_2_more_reviews_TP1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request 2 more reviews TP1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_2_more_reviews_TP2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request 2 more reviews TP2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_2_reviews_TP1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request 2 reviews TP1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_2_reviews_coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request 2 reviews coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_emails_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review emails feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_coaching_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule coaching call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Coaching_Call__c</fullName>
        <label>Scheduled Coaching Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Setup_Call_Date__c</fullName>
        <label>Scheduled Setup Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Select_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_or_schedule_an_email_TP1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send or schedule an email TP1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_or_schedule_an_email_TP2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send or schedule an email TP2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_emails_usage_goal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set emails usage goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_reviews_usage_goal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set reviews usage goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Call_Script__c</fullName>
        <formula>'https://webdc--dreamforce.cs54.my.salesforce.com/articles/Scripts/Yodle-Path-Setup-Call'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Call Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup Call</label>
        <referenceTo>Yodle_Path__c</referenceTo>
        <relationshipLabel>Yodle Path</relationshipLabel>
        <relationshipName>Yodle_Path</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Churned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TP1_Goal__c</fullName>
        <formula>IF(AND (
Account__r.Most_Recent_Login_Date__c  &lt;=  (TODAY()+7),
Account__r.Engagement_Has_Completed_Bulk_Import__c = TRUE,
Account__r.Engagement_Num_Automated_Email_Activated__c  &gt;= 1,
Account__r.Engagement_Num_Review_Request_Last_7_Day__c &gt;= 4,
Account__r.Engagement_Num_Emails_Sent__c &gt;= 1
), "PASS", "FAIL")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TP1 Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TP2_Goal__c</fullName>
        <formula>IF(AND(
Account__r.Most_Recent_Login_Date__c  &lt;= (TODAY()+7),
Account__r.Engagement_Has_Completed_Bulk_Import__c = TRUE,
Account__r.Engagement_Num_Automated_Email_Activated__c   &gt;= 1,
Account__r.Engagement_Num_Review_Request_Last_7_Day__c &gt;= 2,
Account__r.Engagement_Num_Emails_Sent__c &gt;= 1,
Account__r.Engagement_Num_Offers__c &gt;= 1
), "PASS", "FAIL")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TP2 Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TP3_Goal__c</fullName>
        <formula>IF(
AND(

Account__r.Most_Recent_Login_Date__c &lt;= (TODAY()+7), 
Account__r.Engagement_Has_Completed_Bulk_Import__c = TRUE, 
Account__r.Engagement_Num_Automated_Email_Activated__c &gt;= 1, 
OR(
Account__r.Engagement_Num_Emails_Sent__c &gt;= 2,
DATEVALUE(Account__r.Engagement_Date_Last_Email_Sent__c )&lt;= (TODAY()+7)),
Account__r.Engagement_Num_Offers__c  &gt;= 1), "PASS", "FAIL")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TP3 Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Attempts__c</fullName>
        <label>Total Number of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_1_Close_Date__c</fullName>
        <label>Touch Plan 1 Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_1_Scheduled_Date_Time__c</fullName>
        <label>Touch Plan 1 Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_1_Script__c</fullName>
        <formula>'https://na26.salesforce.com/articles/Scripts/Yodle-Path-Touch-Point-1'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Touch Plan 1 Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Touch Plan 1</label>
        <referenceTo>Yodle_Path__c</referenceTo>
        <relationshipLabel>Yodle Path (Touch Plan 1)</relationshipLabel>
        <relationshipName>Yodle_Path2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_2_Close_Date__c</fullName>
        <label>Touch Plan 2 Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_2_Scheduled_Date_Time__c</fullName>
        <label>Touch Plan 2 Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_2_Script__c</fullName>
        <formula>'https://na26.salesforce.com/articles/Scripts/Yodle-Path-Touch-Point-2'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Touch Plan 2 Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Touch Plan 2</label>
        <referenceTo>Yodle_Path__c</referenceTo>
        <relationshipLabel>Yodle Path (Touch Plan 2)</relationshipLabel>
        <relationshipName>Yodle_Path3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_3_Scheduled_Date_Time__c</fullName>
        <label>Touch Plan 3 Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_3_Script__c</fullName>
        <formula>'https://na26.salesforce.com/articles/Scripts/Yodle-Path-Touch-Point-3'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Touch Plan 3 Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Touch Plan 3</label>
        <referenceTo>Yodle_Path__c</referenceTo>
        <relationshipLabel>Yodle Path (Touch Plan 3)</relationshipLabel>
        <relationshipName>Yodle_Path4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Touch Plan In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_Pass_Fail__c</fullName>
        <label>Touch Plan Pass/Fail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Attempt_By__c</fullName>
        <label>1st Attempt By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Attempt_Date__c</fullName>
        <label>1st Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1st_Attempt_Status__c</fullName>
        <label>1st Attempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete - Full Script</fullName>
                </value>
                <value>
                    <fullName>Complete - Short Script</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - LVM</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Could Not Reach</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Attempt_By__c</fullName>
        <label>2nd Attempt By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Attempt_Date__c</fullName>
        <label>2nd Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X2nd_Attempt_Status__c</fullName>
        <label>2nd Attempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete - Full Script</fullName>
                </value>
                <value>
                    <fullName>Complete - Short Script</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - LVM</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Could Not Reach</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Attempt_By__c</fullName>
        <label>3rd Attempt By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Attempt_Date__c</fullName>
        <label>3rd Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3rd_Attempt_Status__c</fullName>
        <label>3rd Attempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete - Full Script</fullName>
                </value>
                <value>
                    <fullName>Complete - Short Script</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - LVM</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Could Not Reach</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_or_More_Attempts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 or More Attempts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_or_More_Attempt_Status__c</fullName>
        <label>4th or More Attempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete - Full Script</fullName>
                </value>
                <value>
                    <fullName>Complete - Short Script</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - LVM</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Could Not Reach</fullName>
                </value>
                <value>
                    <fullName>Did Not Complete - Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yodle_Path_Completed_by__c</fullName>
        <label>Yodle Path Completed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Yodle Path</label>
    <nameField>
        <label>Yodle Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yodle Path</pluralLabel>
    <recordTypes>
        <fullName>Coaching_Call</fullName>
        <active>true</active>
        <description>Used to test the Yodle Path Experience process - Coaching Call</description>
        <label>Coaching Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coaching_Call_4th_Attempt</fullName>
        <active>true</active>
        <label>Coaching Call 4th Attempt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Setup_Call</fullName>
        <active>true</active>
        <description>Used to test the Yodle Path Experience process - Setup Call</description>
        <label>Setup Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Setup_Call_4th_Attempt</fullName>
        <active>true</active>
        <label>Setup Call 4th Attempt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Touch_Plan_1</fullName>
        <active>true</active>
        <description>Used to test the Yodle Path Experience process - Touch Plan 1</description>
        <label>Touch Plan 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Touch_Plan_2</fullName>
        <active>true</active>
        <description>Used to test the Yodle Path Experience process - Touch Plan 2</description>
        <label>Touch Plan 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Touch_Plan_3</fullName>
        <active>true</active>
        <description>Used to test the Yodle Path Experience process - Touch Plan 3</description>
        <label>Touch Plan 3</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Attempt_1_Status_Required</fullName>
        <active>true</active>
        <description>Require Attempt 1 Status</description>
        <errorConditionFormula>NOT( ISBLANK(X1st_Attempt_Date__c) ) &amp;&amp;  ISPICKVAL( X1st_Attempt_Status__c, '')</errorConditionFormula>
        <errorMessage>Attempt 1 Status cannot be blank if you have made the attempt date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Attempt_2_Status_Required</fullName>
        <active>true</active>
        <description>Require Attempt 1 Status</description>
        <errorConditionFormula>NOT( ISBLANK(X2nd_Attempt_Date__c) ) &amp;&amp;  ISPICKVAL( X2nd_Attempt_Status__c, '')</errorConditionFormula>
        <errorMessage>Attempt 2 Status cannot be blank if you have made the attempt date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Attempt_3_Status_Required</fullName>
        <active>true</active>
        <description>Require Attempt 3 Status</description>
        <errorConditionFormula>NOT( ISBLANK(X3rd_Attempt_Date__c) ) &amp;&amp;  ISPICKVAL( X3rd_Attempt_Status__c, '')</errorConditionFormula>
        <errorMessage>Attempt 3 Status cannot be blank if you have made the attempt date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_If_Full_Script_Coaching_Date</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId = '01232000000JN26' &amp;&amp; (( 
ISPICKVAL( X1st_Attempt_Status__c, 'Complete - Full Script') || 
ISPICKVAL( X2nd_Attempt_Status__c, 'Complete - Full Script') || 
ISPICKVAL( X3rd_Attempt_Status__c , 'Complete - Full Script')) 
|| ISPICKVAL(Status__c , 'Completed')) &amp;&amp; ISBLANK(Scheduled_Coaching_Call__c)</errorConditionFormula>
        <errorMessage>Please fill in the scheduled coaching call date because you were able to cover the complete - full script of this call.</errorMessage>
    </validationRules>
</CustomObject>